--- a/L2/tv2.html
+++ b/L2/tv2.html
@@ -56,7 +56,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'http://test.verac.top:8080/live/481706305408138/4adfdac21f32/9969.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'https://live.teleradiocom.tj/8/3m.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
