--- a/L1/tv3.html
+++ b/L1/tv3.html
@@ -35,7 +35,7 @@
             var hls = new Hls();
 
             // The URL to your .m3u8 file
-            var m3u8Url = 'http://1tv41.icu:8080/live/Gizvid145@giz.com/1234@4321/137720.m3u8';
+            var m3u8Url = 'http://154.58.202.185:8000/play/a09w';
 
             // Load the M3U8 stream
             hls.loadSource(m3u8Url);
