--- a/L1/tv3.html
+++ b/L1/tv3.html
@@ -2,79 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome,opera,firefox,safari">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Sport.afg</title>
+    <title>live sport.afg</title>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+
     <style>
+       
+       @keyframes colorChange {
+            30% { color :rgb(14, 15, 13)}
+            65% { color: rgb(255, 0, 0); }
+            100% { color: rgb(29, 238, 29); }
+            70% { color: rgb(29, 238, 29); }
+            40% { color: rgb(255, 0, 0); }
+            20% { color: rgb(6, 7, 6); }
+        }
+
+        .color-changing {
+            font-size: 3,5px;
+            animation: colorChange 5s infinite;
+        }
+
         body {
+            margin: 5px;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            background-color:rgb(41, 2, 2);
+            background-color:rgb(81, 101, 9);
+            padding-top: 0px;
+            padding: 0;
         }
         video {
-            width: 80%;
+            /*margin-top: 10px;*/
+            width: 100%;
             max-width: 800px;
-            border: 2px solid #ccc;
-            border-radius: 8px;
-        }
+            border: 1px solid #ccc;
+            border-radius: 5px;
+           }
+           @font-face {
+  font-family: 'CustomFont';
+  src: url('customfont.woff2') format('woff2');
+  font-display: swap;
+}
+
     </style>
 </head>
 <body>
 
-    <video id="video" controls></video>
-
-    <!-- Include the HLS.js library -->
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@1.4.0/dist/hls.min.js"></script>
-
+    <tex align ="center"> <h1 class="color-changing"> <!---      -->(🇦🇫) سلام از افغانستان (🇦🇫)</h1><br>
+   
+    <video id="video" controls autoplay></video>
     <script>
-        // Check if the browser supports HLS natively
-        if (Hls.isSupported()) {
-            var video = document.getElementById('video');
-            var hls = new Hls();
+        const video = document.getElementById('video');
+        const hls = new Hls();
+        const m3u8Url = 'https://hls.pokertvfa.live/hls/stream.m3u8'; // Replace with your M3U8 URL
 
-            // The URL to your .m3u8 file
-            var m3u8Url = 'http://154.58.202.185:8000/play/a09w';
-
-            // Load the M3U8 stream
-            hls.loadSource(m3u8Url);
-            hls.attachMedia(video);
-
-            // Start the video playback once the stream is ready
-            hls.on(Hls.Events.MANIFEST_PARSED, function () {
-                video.play();
-            });
-
-            // Handle any error
-            hls.on(Hls.Events.ERROR, function (event, data) {
-                if (data.fatal) {
-                    switch (data.type) {
-                        case Hls.ErrorTypes.NETWORK_ERROR:
-                            console.error("Network error encountered.");
-                            break;
-                        case Hls.ErrorTypes.MEDIA_ERROR:
-                            console.error("Media error encountered.");
-                            break;
-                        case Hls.ErrorTypes.OTHER_ERROR:
-                            console.error("Other error encountered.");
-                            break;
-                        default:
-                            console.error("An error occurred.");
-                            break;
-                    }
-                }
-            });
-        }
-        // For browsers that support HLS natively (like Safari)
-        else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-            var video = document.getElementById('video');
-            video.src = 'http://1tv41.icu:8080/live/Gizvid145@giz.com/1234@4321/137720.m3u8';
+        hls.loadSource(m3u8Url);
+        hls.attachMedia(video);
+        hls.on(Hls.Events.MANIFEST_PARSED, function () {
             video.play();
-        } else {
-            console.error('HLS is not supported in your browser.');
-        }
+        });
     </script>
-
 </body>
 </html>
