--- a/L1/tv2.html
+++ b/L1/tv2.html
@@ -19,7 +19,7 @@
         }
 
         .color-changing {
-            font-size: 30px;
+            font-size: 3,5px;
             animation: colorChange 5s infinite;
         }
 
@@ -56,7 +56,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'https://stream.live12.ir/hls2/persiana.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'https://newserverpersiana.maniatream.com/live/vcW_OAfn1lDZfmxiPOv6RA__/stream_0.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
