--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -731,7 +731,7 @@ href="https://ourlibrary.us/computer"
         </div>
 </div><div id="jw-element-416146831" data-jw-element-id="416146831" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <p style="text-align: center;"><span style="color: #860f0f;"><strong>A vs B</strong></span></p>    </div>
+            <p style="text-align: center;"><span style="color: #860f0f;"><strong>Lenz Sport</strong></span></p>    </div>
 </div><div id="jw-element-416147111" data-jw-element-id="416147111" class="jw-tree-node jw-element jw-button jw-node-is-last-child">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://ourlibrary.us/L2/tv3" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: var(--jw-swatch--header-color, #860f0f);--jw-comp--button--on-primary-color: var(--jw-swatch--header-color--button-text-on);--jw-comp--button--primary-color-hover: var(--jw-swatch--header-color--button-hover);">
@@ -783,7 +783,7 @@ href="https://ourlibrary.us/computer"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                6 (🇦🇫)            </div>
+                6 (🇮🇷)            </div>
         </a>
     </div>
 </div></div><div id="jw-element-416146374" data-jw-element-id="416146374" style="width: 25%" class="jw-tree-node jw-element jw-column jw-tree-container jw-responsive lt300 lt400 lt480 lt540 lt600 lt640 lt800">
