--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -795,7 +795,7 @@ href="https://ourlibrary.us/computer"
         </div>
 </div><div id="jw-element-416146869" data-jw-element-id="416146869" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <p style="text-align: center;"><span style="color: #860f0f;"><strong>A vs B</strong></span></p>    </div>
+            <p style="text-align: center;"><span style="color: #860f0f;"><strong>Neto Sport</strong></span></p>    </div>
 </div><div id="jw-element-416147122" data-jw-element-id="416147122" class="jw-tree-node jw-element jw-button jw-node-is-last-child">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://ourlibrary.us/L1/tv4" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: var(--jw-swatch--header-color, #860f0f);--jw-comp--button--on-primary-color: var(--jw-swatch--header-color--button-text-on);--jw-comp--button--primary-color-hover: var(--jw-swatch--header-color--button-hover);">
@@ -853,7 +853,7 @@ href="https://ourlibrary.us/computer"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                7 (🇬🇧)            </div>
+                7 (🇵🇱)            </div>
         </a>
     </div>
 </div></div><div id="jw-element-416146382" data-jw-element-id="416146382" style="width: 25%" class="jw-tree-node jw-element jw-column jw-tree-container jw-node-is-last-child jw-responsive lt300 lt400 lt480 lt540 lt600 lt640 lt800">
