--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
     <meta name="keyword" content="کتاب,سریال دوبله,فیلم دوبله, pdf, live-sport">
     <meta name="keyword" content="کتاب,سریال دوبله,فیلم دوبله, pdf فارسى، live-sport">
+    <meta name-="keword" content=" live sport,live football,live soccer, football">
+    <meta name="description" content="Watch live sports for free on OurLibrary! Stream major events like NFL, NBA, football, and more. Get real-time scores and updates from top sports leagues.">
+    <meta name="keywords" content="live sports streaming, free sports streaming, watch sports live, live sports online, NFL streaming, NBA live, soccer, football streaming">
+    <link rel="canonical" href="https://ourlibrary.us/live-sport/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome,opera,firefox,safari">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
         <link rel="canonical" href="https://ourlibrary.us/">
