--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -3,6 +3,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome, opera , firefox">
         <link rel="canonical" href="https://ourlibrary.us/live-sport">
+	<meta name-="keword" content=" live sport,live football,live soccer, football">
+    <meta name="description" content="Watch live sports for free on OurLibrary! Stream major events like NFL, NBA, football, and more. Get real-time scores and updates from top sports leagues.">
+    <meta name="keywords" content="live sports streaming, free sports streaming, watch sports live, live sports online, NFL streaming, NBA live, soccer, football streaming">
+    <link rel="canonical" href="https://ourlibrary.us/live-sport/" />
         <meta property="og:title" content="Live Sport | Ourlibrary">
         <meta property="og:url" content="https://ourlibrary.us/live-sport">
         
