--- a/L1/tv4.html
+++ b/L1/tv4.html
@@ -53,7 +53,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'https://newserverpersiana.maniatream.com/live/dUCWDa1chU8rmdcT6Ob9FA__/stream_0.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'https://stream.sainaertebat.com/hls2/varzeshtest.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
