--- a/L1/tv1.html
+++ b/L1/tv1.html
@@ -37,7 +37,7 @@
             /*margin-top: 10px;*/
             width: 100%;
             max-width: 800px;
-            border: 1px solid #ccc;
+            border: 1px solid # 030303;
             border-radius: 5px;
            }
            @font-face {
