--- a/L1/tv4.html
+++ b/L1/tv4.html
@@ -36,7 +36,7 @@
             /*margin-top: 10px;*/
             width: 100%;
             max-width: 800px;
-            border: 1px solid #ebe0e0;
+            border: 1px solid #030303;
             border-radius: 2px;
            
          
