--- a/L2/tv1.html
+++ b/L2/tv1.html
@@ -59,8 +59,8 @@ video {
     width: 80%;
     max-width: 800px;
     margin-top: 20px;
-    border: 3px solid #ccc;
-    border-radius: 8px;
+    border: 1px solid #030303;
+    border-radius: 1px;
     margin: 50px;
 }
     </style>
