--- a/L2/tv2.html
+++ b/L2/tv2.html
@@ -37,8 +37,8 @@
             /*margin-top: 10px;*/
             width: 100%;
             max-width: 800px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            border: 1px solid #030303;
+            border-radius: 1px;
            }
            @font-face {
   font-family: 'CustomFont';
