--- a/L2/tv3.html
+++ b/L2/tv3.html
@@ -59,7 +59,7 @@ video {
     width: 80%;
     max-width: 800px;
     margin-top: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #030303;
     border-radius: 1px;
     margin: 50px;
 }
