--- a/L2/tv4.html
+++ b/L2/tv4.html
@@ -36,8 +36,8 @@
             /*margin-top: 10px;*/
             width: 100%;
             max-width: 800px;
-            border: 1px solid #ebe0e0;
-            border-radius: 2px;
+            border: 1px solid #030303;
+            border-radius: 1px;
            
          
         }
