--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </ul>
     </li>
         <li class="jw-menu-item">
-    <a class="jw-menu-link" href="https://ourlibrary.us/loivesport" data-link-id="23774449">
+    <a class="jw-menu-link" href="https://ourlibrary.us/livesport" data-link-id="23774449">
             <span class="">
         Live Sport        </span>
         </a>
@@ -310,7 +310,7 @@
     >
     <a
     class="jw-menu-link"
-    href="https://ourlibrary.us/loivesport"
+    href="https://ourlibrary.us/livesport"
                                         data-link-id="23774449">
     
             <span class="">
