--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -389,7 +389,7 @@ href="https://ourlibrary.us/computer"
         </div>
 </div><div id="jw-element-416146245" data-jw-element-id="416146245" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <p style="text-align: center;"><strong><span style="color: #860f0f;"></span><span style="color: #860f0f;">A vs B</span></strong></p>    </div>
+            <p style="text-align: center;"><strong><span style="color: #860f0f;"></span><span style="color: #860f0f;">Prsiana Sport</span></strong></p>    </div>
 </div><div id="jw-element-416146335" data-jw-element-id="416146335" class="jw-tree-node jw-element jw-button jw-node-is-last-child">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://ourlibrary.us/L1/tv1" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: var(--jw-swatch--header-color, #860f0f);--jw-comp--button--on-primary-color: var(--jw-swatch--header-color--button-text-on);--jw-comp--button--primary-color-hover: var(--jw-swatch--header-color--button-hover);">
@@ -447,7 +447,7 @@ href="https://ourlibrary.us/computer"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                1 (🇬🇧)            </div>
+                1 (IR)            </div>
         </a>
     </div>
 </div></div><div id="jw-element-416141882" data-jw-element-id="416141882" style="width: 25%" class="jw-tree-node jw-element jw-column jw-tree-container jw-responsive lt300 lt400 lt480 lt540 lt600 lt640 lt800">
