--- a/L1/tv1.html
+++ b/L1/tv1.html
@@ -19,7 +19,7 @@
         }
 
         .color-changing {
-            font-size: 3,5px;
+            font-size: 3 px;
             animation: colorChange 5s infinite;
         }
 
@@ -56,7 +56,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'https://spstr.abntv.live/hls/psstream.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'https://stream.sainaertebat.com/hls2/solhtv.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
