--- a/L2/tv1.html
+++ b/L2/tv1.html
@@ -23,7 +23,7 @@
         }
 
         body {
-             margin: 0;
+             margin: 5px;
             display: flex;
             justify-content: center;
             align-items: center;
