--- a/L1/tv2.html
+++ b/L1/tv2.html
@@ -18,12 +18,12 @@
         }
 
         .color-changing {
-            font-size: 3 px;
+            font-size: 3,5px;
             animation: colorChange 5s infinite;
         }
 
         body {
-             margin: 5px;
+             margin: 5;
             display: flex;
             justify-content: center;
             align-items: center;
