--- a/L1/tv2.html
+++ b/L1/tv2.html
@@ -23,7 +23,7 @@
         }
 
         body {
-             margin: 5;
+             margin: 5px;
             display: flex;
             justify-content: center;
             align-items: center;
