--- a/L1/tv6.html
+++ b/L1/tv6.html
@@ -20,7 +20,7 @@
         }
 
         .color-changing {
-            font-size: 3,5m;
+            font-size: 2,5px;
             animation: colorChange 5s infinite;
            
 
