--- a/L2/tv2.html
+++ b/L2/tv2.html
@@ -56,7 +56,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'https://rtatv.akamaized.net/Content/HLS/Live/channel(RTA3)/index.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'https://gg.hls2.xyz/live/IR%20-%20Varzish%20TV/playlist.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
