--- a/L1/tv4.html
+++ b/L1/tv4.html
@@ -56,7 +56,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url =   'http://212.102.60.10/FOX_Sports_1/index.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url =   'https://wo.cma.footballii.ir/hls2/tnt1.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
