--- a/L2/tv3.html
+++ b/L2/tv3.html
@@ -82,7 +82,7 @@ video {
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'https://cdn.sainaertebat.com/hls/gemsport/stream.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'https://cdn.sainaertebat.com/hls/gemsport/stream.m3u8; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
