--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
 
-    <meta name="keyword" content="کتاب,سریال دوبله,فیلم دوبله, pdf فارسى، loivesport">
+    <meta name="keyword" content="کتاب,سریال دوبله,فیلم دوبله, pdf فارسى، livesport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome,opera,firefox,safari">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
         <link rel="canonical" href="https://ourlibrary.us/">
@@ -142,7 +142,7 @@
                 </ul>
     </li>
         <li class="jw-menu-item">
-    <a class="jw-menu-link" href="https://ourlibrary.us/loivesport" data-link-id="23774449">
+    <a class="jw-menu-link" href="https://ourlibrary.us/livesport" data-link-id="23774449">
             <span class="">
         Live Sport        </span>
         </a>
@@ -310,7 +310,7 @@
     >
     <a
     class="jw-menu-link"
-    href="https://ourlibrary.us/loivesport"
+    href="https://ourlibrary.us/livesport"
                                         data-link-id="23774449">
     
             <span class="">
@@ -478,3 +478,4 @@
 <script src="https://www.Ourlibrary.afg/v2/unsafe-token/4144504" nonce="" async="1"></script>    
 
 </body></html>
+
