--- a/L1/tv2.html
+++ b/L1/tv2.html
@@ -53,7 +53,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'https://spstr.abntv.live/hls/psstream.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'https://lenz.splus.ir/PLTV/88888888/224/3221226845/1.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
