--- a/L1/tv3.html
+++ b/L1/tv3.html
@@ -56,7 +56,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'https://spstr.abntv.live/hls/psstream.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'http://fl7.moveonjoy.com/BEIN_SPORTS/index.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
